# PrivacyProxy

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/pp-anonymize/: Cargo.toml
crates/pp-anonymize/src/: lib.rs
crates/pp-anonymize/tests/: leak.rs
crates/pp-core/: Cargo.toml
crates/pp-core/src/: lib.rs
crates/pp-detect/: Cargo.toml
crates/pp-detect/src/: lib.rs
crates/pp-eval/: Cargo.toml
crates/pp-eval/src/: lib.rs  main.rs
crates/pp-gateway/: Cargo.toml
crates/pp-gateway/src/: anthropic.rs  main.rs  pipeline.rs
crates/pp-protocol/: Cargo.toml
crates/pp-protocol/src/: lib.rs
crates/pp-store/: Cargo.toml
crates/pp-store/src/: lib.rs
crates/pp-upstream/: Cargo.toml
crates/pp-upstream/src/: lib.rs
doc/: MEMORY.md
scripts/: check-mermaid.mjs
