[package]
name = "pp-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pp-core = { path = "../pp-core" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
