[package]
name = "pp-upstream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1"
thiserror = "1"
